<resources>
    <string name="app_name">Eco Social</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ecosocial</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre o App...</string>
    <string name="buttonPrincipal">Principal</string>
    <string name="buttonEncontros">Encontros</string>
    <string name="contato">Contatos: 1?</string>
    <string name="vazioText">Ainda Estou Vazio...T.T</string>

    <string name="sobre_o_app">Ecosocial</string>
    <string name="sobre_o_app2">Versão 1.0</string>
    <string name="sobre_o_app3">Este é o protótipo de um App, ou seja a demosntração Gráfica do app Toda parte gráfica e implementação do App poderá ser Editada posteriormente de acordo com o projeto</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Ocorrências</string>
    <string name="eventos_perto">Ocorrências na sua Área</string>
    <string name="search_events">Pesquisar Locais</string>
    <string name="todo">TODO</string>
    <string name="string_marcar_evento">Marcar Ocorrência</string>
    <string name="convidar_amigos">Convidar Amigos</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="communicate">Communicate</string>
    <string name="eventos">Ocorrências</string>
    <string name="principal">Principal</string>
    <string name="icone">icone</string>
    <string name="descricao">Descrição</string>
    <string name="title_activity_add_event2">Map</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Login ou registrar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha curta</string>
    <string name="error_field_required">Este campo é necessário</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_password">Senha</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_invalid_phone">Erro telefone inválido</string>
    <string name="telefone_text">Telefone</string>
    <string name="senha_text">Senha</string>
    <string name="e_mail_text">E-mail</string>
    <string name="nome_text">Nome</string>
    <string name="service_not_available">Serviço não disponivel</string>
    <string name="invalid_lat_long_used">Lat ou lng inválidos</string>
    <string name="no_address_found">Endereço não encontrado</string>
    <string name="address_found">Endereço encontrado</string>
    <string name="no_geocoder_available">Geocoder não disponivel</string>
    <string name="adicionar">Adicionar</string>
    <string name="identifique_a_acao">Identifique a Ação</string>
    <string name="horario">Horario</string>
    <string name="escolher_imagem">Escolher imagem:</string>
    <string name="escolher">Escolher</string>
    <string name="selecione_o_local_no_mapa">Selecione o local no mapa</string>
    <string name="nenhuma">Nenhuma</string>
    <string name="data">Data: </string>
    <string name="coleta_de_lixo">Coleta de lixo</string>
    <string name="animal_perdido">Animal Perdido</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="informaces_do_evento">Informações da Ocorrência</string>
    <string name="autor">Autor: </string>
    <string name="nome">Nome</string>
    <string name="endere_o">Endereço: </string>
    <string name="descri_o">Descrição: </string>
    <string name="foto">Foto</string>
    <string name="informa_es_de_contato">Informações de contato</string>
    <string name="email">Email:</string>
    <string name="telefone">Telefone: </string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="logo">logo</string>
    <string name="ecosocial">EcoSocial</string>
    <string name="fa_a_uma_boa_a_o">Faça uma boa Ação</string>
    <string name="fazer_login">Fazer login</string>
    <string name="seus_eventos">Suas Ocorrências</string>
    <string name="nome_do_usuario">Nome do Usuario</string>
    <string name="email_do_usuario">Email do usuario</string>
    <string name="trocar_foto">Trocar Foto</string>
    <string name="img_usuario">img_usuario</string>
    <string name="ver_no_mapa">Ver no mapa</string>
    <string name="share">Compartilhar</string>
    <string name="share_on_facebook">Compartilhar
        no Facebook</string>
    <string name="exit">Sair</string>
    <string name="account">Conta</string>
    <string name="info">Informações</string>
</resources>
