<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/primary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="85dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo_prototipo_mateus"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/logo_prototipo_mateus" />

    <TextView
        android:id="@+id/textview_nav_header_nome"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_nav_header_email"
        android:layout_alignStart="@+id/imageViewLogo"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Branco" />

    <TextView
        android:id="@+id/textView_nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageViewLogo"
        android:layout_marginBottom="11dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/Branco" />

    <TextView
        android:id="@+id/usuario_nome_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/background_text"
        android:clickable="true"
        android:text="@string/fazer_login"
        android:textAlignment="center"
        android:textColor="@color/Branco"
        android:textSize="22sp"
        android:focusable="true" />

</RelativeLayout>
